add makefile and other minor changes

--- a/problems.tex
+++ b/problems.tex
@@ -117,7 +117,7 @@ Equilibrium Analysis with Mathematical Programming Methods}~前五章的习题,
 奖金数量不变, 中奖率将上升并趋于均衡点.
 \begin{figure}[ht]
 \begin{center}
-\includegraphics{s1-1-0}
+\includegraphics{fig/s1-1-0}
 \caption{需求/效能均衡}
 \label{fig:s1-1}
 \end{center}
@@ -135,7 +135,7 @@ t_3 &= 3 + x_3
 从节点~1~到节点~4~有~4~个单位的出行需求.
 \begin{figure}[ht]
 \begin{center}
-\includegraphics{p1-2-0}
+\includegraphics{fig/p1-2-0}
 \caption{习题1.2图}
 \label{fig:p1-2}
 \end{center}
@@ -170,7 +170,7 @@ $$ t_a = A_a + B_ax_a $$
 上的旅行时间和交通流量. 起点和终点间的出行需求为~$q$~.
 \begin{figure}[ht]
 \begin{center}
-\includegraphics{p1-3-0}
+\includegraphics{fig/p1-3-0}
 \caption{习题1.3图}
 \label{fig:p1-3}
 \end{center}
@@ -732,7 +732,7 @@ u_j \geq 0, \lambda_j &\geq 0
 的路径--路段关联矩阵. 使用这个矩阵由~$\mathbf f$~得出~$x_3$.
 \begin{figure}[ht]
 \begin{center}
-\includegraphics{p3-1-0};
+\includegraphics{fig/p3-1-0};
 \caption{习题~3.1~图}
 \label{fig:p3-1}
 \end{center}
@@ -765,7 +765,7 @@ $t_1 = 2 + x_1, t_2 = 1 + 2x_2$.}.
 解释取得最优解时拉格朗日乘数的意义.
 \begin{figure}[ht]
 \begin{center}
-\includegraphics{p3-2-0}
+\includegraphics{fig/p3-2-0}
 \caption{习题~3.2~图}
 \label{fig:p3-2}
 \end{center}
@@ -812,7 +812,7 @@ t_4 &= 2 + 4x_4
 (路段编号标注在各路段之上). 节点~1, 3~间有~4~单位的交通流量.
 \begin{figure}[ht]
 \begin{center}
-\includegraphics{p3-3-0}
+\includegraphics{fig/p3-3-0}
 \caption{习题~3.3~图}
 \label{fig:p3-3}
 \end{center}
@@ -884,7 +884,7 @@ O--D~对间的交通需求分别为~$q_{15} = 2, q_{25} = 3$.}.
 写出用户均衡的等价数学规划, 并且求解其一阶条件.
 \begin{figure}[ht]
 \begin{center}
-\includegraphics{p3-4-0}
+\includegraphics{fig/p3-4-0}
 \caption{习题~3.4~图}
 \label{fig:p3-4}
 \end{center}
@@ -1099,7 +1099,7 @@ q &= 1.5
 \end{compactenum}
 \begin{figure}
 \begin{center}
-\includegraphics{p3-12-0}
+\includegraphics{fig/p3-12-0}
 \caption{习题~3.12~图}
 \label{fig:p3-12}
 \end{center}
@@ -1156,7 +1156,7 @@ $$ t_1(x_1) = 50 + x_1, t_2(x_2) = 50 + x_2, t_3(x_3) = 10x_3, t_4(x_4) = 10x_4,
 系统最优配流中如果有路段被添加进来总的行驶时间不可能增加.
 \begin{figure}[ht]
 \begin{center}
-\includegraphics{p3-13-0}
+\includegraphics{fig/p3-13-0}
 \caption{习题~3.12~图}
 \label{fig:p3-13}
 \end{center}
@@ -1231,7 +1231,7 @@ $$ \inf \{z(D)\} \leq \inf \{z(\tilde{D})\} $$
 假设交通规划者可以对连接图~\ref{fig:p3-14}~中的起讫点对的每条道路征收通行费.
 \begin{figure}[ht]
 \begin{center}
-\includegraphics{p3-14-0}
+\includegraphics{fig/p3-14-0}
 \caption{习题~3.14~图}
 \label{fig:p3-14}
 \end{center}
@@ -1828,7 +1828,7 @@ $$\tilde{t}_a(x_a) = t_a(x_a) + x_a \frac{dt_a(x_a)}{dx_a}$$
 且流量--延误曲线为~$t_a = 0.15(x/a)^4$, 其中~$a$~为图中的路段编号. 进行三次凸组合算法迭代.
 \begin{figure}[ht]
 \begin{center}
-\includegraphics{p5-2-0}
+\includegraphics{fig/p5-2-0}
 \caption{习题~5.2~图}
 \label{fig:p5-2}
 \end{center}
@@ -1964,7 +1964,7 @@ $$\min_{0 \leq\,\alpha\,\leq 1} z[\mathbf f^n + \alpha (\mathbf g^n - \mathbf f^
 使用标号改正算法求图~\ref{fig:p5-6}~所示交通网络中从节点~1~到其他所有节点的最短路径.
 \begin{figure}[ht]
 \begin{center}
-\includegraphics{p5-6-0}
+\includegraphics{fig/p5-6-0}
 \caption{习题~5.6~图}
 \label{fig:p5-6}
 \end{center}
